# dblinter

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .tool-versions  CONTRIBUTING.md  Dockerfile  LICENCE.md  README.md  dblinter.cfg  pyproject.toml  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_request.md  feature_request.md
.github/workflows/: build-main.yaml  build-pr.yaml  codeql.yml  release.yaml
dblinter/: __init__.py  __main__.py  configuration.py  configuration_model.py  database_connection.py  default_config.yaml  function_library.py  sarif_document.py  scan.py
dblinter/rules/B001/: HowManyTableWithoutPrimaryKey.py
dblinter/rules/B002/: HowManyRedudantIndex.py
dblinter/rules/B003/: HowManyTableWithoutIndexOnFk.py
dblinter/rules/B004/: HowManyUnusedIndex.py
dblinter/rules/B005/: UnsecuredPublicSchema.py
dblinter/rules/B006/: HowManyTablesWithUppercase.py
dblinter/rules/C001/: MaxConnectionsByWorkMemIsNotLargerThanMemory.py
dblinter/rules/C002/: PgHbaEntriesWithMethodTrustOrPasswordShouldNotExists.py
dblinter/rules/C003/: PasswordEncryptionIsMd5.py
dblinter/rules/S001/: SchemaWithDefaultRoleNotGranted.py
dblinter/rules/S002/: SchemaPrefixedOrSuffixedWithEnvt.py
dblinter/rules/T001/: TableWithoutPrimaryKey.py
dblinter/rules/T002/: TableWithRedundantIndex.py  TableWithoutIndex.py
dblinter/rules/T003/: TableWithFkNotIndexed.py  TableWithRedundantIndex.py
dblinter/rules/T004/: TableWithFkNotIndexed.py
dblinter/rules/T005/: TableWithPotentialMissingIdx.py
dblinter/rules/T006/: TableWithFkOutsideSchema.py
dblinter/rules/T007/: TableWithUnusedIndex.py
dblinter/rules/T008/: TableWithFkMismatch.py
dblinter/rules/T009/: TableWithRoleNotGranted.py
dblinter/rules/T010/: ReservedKeyWord.py
dblinter/rules/T011/: TableWithUppercase.py
dblinter/rules/T012/: TableWithSensibleColumn.py
tests/: conftest.py  test_config_file.py  test_database_connection.py  test_function_library.py  test_main.py  test_main_invocation.py  test_sarif_document.py
tests/data/: config_file_syntax_error.yaml  config_file_wrong_function_name.yaml  good_config.yaml
tests/rules/B001/: test_HowManyTableWithoutPrimaryKey.py
tests/rules/B002/: test_HowManyRedudantIndex.py
tests/rules/B003/: test_HowManyTableWithoutIndexOnFk.py
tests/rules/B004/: test_HowManyUnusedIndex.py
tests/rules/B005/: test_UnsecuredPublicSchema.py
tests/rules/B006/: test_HowManyTablesWithUppercase.py
tests/rules/C001/: test_MaxConnectionsByWorkMemIsNotLargerThanMemory.py
tests/rules/C002/: test_PgHbaEntriesWithMethodTrustOrPasswordShouldNotExists.py
tests/rules/C003/: test_PasswordEncryptionIsMd5.py
tests/rules/S001/: test_SchemaWithDefaultRoleNotGranted.py
tests/rules/S002/: test_SchemaPrefixedOrSuffixedWithEnvt.py
tests/rules/T001/: test_TableWithoutPrimaryKey.py
tests/rules/T002/: test_TableWithRedundantIndex.py  test_TableWithoutIndex.py
tests/rules/T003/: test_TableWithFkNotIndexed.py  test_TableWithRedundantIndex.py
tests/rules/T004/: test_TableWithUnusedIndex.py
tests/rules/T007/: test_TableWithFkOutsideSchema.py
tests/rules/T008/: test_TableWithFkMismatch.py
tests/rules/T009/: test_TableWithRoleNotGranted.py
tests/rules/T010/: test_ReservedKeyWord.py
tests/rules/T011/: test_TableWithPotentialMissingIdx.py  test_TableWithUppercase.py
tests/rules/T012/: test_TableWithSensibleColumn.py
